# metallocene-epdm-digital-twin

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.zh-CN.md  README_Deep_Technical.md  README_Manual_And_Tech.md  README_backup_original.md  README_technical.md  app.py  generate_detailed_docx.py  generate_detailed_readme.py  generate_manual.py  generate_report.py  pyproject.toml  requirements.txt  technical_report.md
data/: benchmark_sources.json  binary_interactions.json  catalysts.json  default_config.yaml  engineering_rules.json  equation_registry.json  experiment_schema.json  (+10 more)
legacy_archive/metallocene-epdm-process-simulator/: .gitignore  MERGED_INTO_DIGITAL_TWIN.md  README.md  app.py  legacy_app.py  pyproject.toml  requirements.txt
legacy_archive/metallocene-epdm-process-simulator/data/: components.json  default_config.yaml  fluid_property_calibration.csv  target_grades.json
legacy_archive/metallocene-epdm-process-simulator/epdm_sim/: __init__.py  components.py  flash.py  flowsheet.py  fluid_props.py  heat_balance.py  kinetics.py  optimizer.py  polymer_props.py  reactor.py  report.py  sensitivity.py  thermo.py  unitops.py  utils.py
legacy_archive/metallocene-epdm-process-simulator/epdm_sim/cfd/: __init__.py  fem_solver.py  fields.py  fouling.py  mesh.py  openfoam_export.py  simple_solver.py  transport.py  visualization.py
legacy_archive/metallocene-epdm-process-simulator/tests/: test_cfd_transport.py  test_flowsheet.py  test_fluid_props.py  test_heat_balance.py  test_openfoam_export.py  test_reactor.py  test_thermo.py  test_unitops.py
(+479 files in other folders)
