[project]
name = "metallocene-epdm-digital-twin"
version = "0.7.4"
description = "Local MVP process simulator and digital twin for metallocene EPM/EPDM solution polymerization"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.31",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "plotly>=5.18",
  "pydantic>=1.10",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "reportlab>=4.0",
  "python-docx>=1.1",
  "PyYAML>=6.0",
  "networkx>=3.0",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


