[project]
name = "metallocene-epdm-process-simulator"
version = "0.1.0"
description = "Local MVP process simulator for metallocene EPDM/EPM solution polymerization"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.31",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "plotly>=5.18",
  "pydantic>=1.10",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "reportlab>=4.0",
  "python-docx>=1.1",
  "PyYAML>=6.0",
  "networkx>=3.0",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
